# QT6_Tasks

./: README.md
Task1/: CMakeLists.txt  Main.qml  main.cpp
Task2/Task_Video/: Task2.webm
Task2/four_buttons/: CMakeLists.txt  Images.qrc  Main.qml  main.cpp
Task3/: CMakeLists.txt  ledcontroller.h
Task3/code/: ledcontroller.cpp  main.cpp
